  - cont3xt - new OpenSearch/Elasticsearch integration (config file only)
  - cont3xt - new csv/json file/url/redis integration (config file only)
  - cont3xt - new viewRoles in config file per integration to control access
  - cont3xt - transfer ownership of resources
  - cont3xt - new csv/json data source supports
  - cont3xt - new redis data source support
  - viewer - removed x-moloch-auth
  - viewer - files/history/stats now have cluster dropdown for multiviewer
  - viewer - http.request.FIELD and http.response.FIELD supported
  - viewer - add editor for resources
  - viewer - transfer ownership of resources
  - viewer - added uploadRoles to control who can upload
  - parliament - dashboard-only mode removed, if you want users to just see
                 the dashboard don't assign them the parliamentUser role
  - parliament - configuration is now stored in opensearch/elasticsearch


4.6.0 2023/10/16
  - release - curl 8.4.0
  - release - fix viewer systemd file
  - capture - fix zstd hanging capture on full buffer
  - viewer - corrupt http session decoding might hang viewer
  - viewer - handle uncompressing pcap errors better
  - viewer - role check in UI didn't always work
  - all - handle cookies encoded with bad proxy

4.5.0 2023/09/13
  - release - node 16.20.2
  - release - added missingok to default logrotate for arkime
  - capture - dns answers were double parsed
  - capture - custom-fields honors viewerOnly:true
  - capture - added dns.https fields
  - capture - added cert:certificate-authority tag (thanks mcgillowen )
  - cont3xt - remove raw view button for link groups on the cont3xt search page
  - cont3xt - Overview shortcut
  - cont3xt - fixed overviews not updating on switch
  - db.pl - don't allow '.' to be used for sync/add path
  - viewer - fixed ipv6 session display issues when :: in ip
  - viewer - http display rewritten to not depending on nodejs internals
  - viewer - gpe display improvements

4.4.0 2023/08/02